testing/RESTFullApiSample/Product API/api/errors/bad-request/Demonstrates a 400 Bad Request with ProblemDetails.bru
meta {
  name: Demonstrates a 400 Bad Request with ProblemDetails
  type: http
  seq: 1
}

post {
  url: {{baseUrl}}/api/errors/bad-request
  body: none
  auth: inherit
}
